--- a/index.html
+++ b/index.html
@@ -1,49 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>Drish Quality Products</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Razorpay Script -->
+  <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
   <style>
-    body { font-family: Arial, sans-serif; margin:0; background:#f5f5f5; }
+    body { font-family: Arial, sans-serif; margin:0; background:#f4f4f4; }
     header { background:#000; color:#fff; padding:15px; text-align:center; }
     .container { padding:20px; }
-    .products { display:grid; grid-template-columns:repeat(auto-fit,minmax(200px,1fr)); gap:20px; }
+    .products { display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:20px; }
     .card { background:#fff; padding:15px; border-radius:10px; box-shadow:0 4px 10px rgba(0,0,0,.1); }
-    .card img { width:100%; border-radius:10px; }
-    button { background:#000; color:#fff; border:none; padding:10px; width:100%; border-radius:5px; margin-top:10px; cursor:pointer; }
-    footer { text-align:center; padding:15px; font-size:14px; color:#666; }
+    button { background:#000; color:#fff; border:none; padding:12px; width:100%; border-radius:6px; margin-top:10px; font-size:16px; }
+    footer { text-align:center; padding:15px; color:#666; }
   </style>
 </head>
+
 <body>
 
 <header>
   <h1>Drish Quality Products</h1>
-  <p>Premium Watches | Online Payment & COD Available</p>
+  <p>Premium Watches | Secure Online Payment</p>
 </header>
 
 <div class="container">
   <div class="products">
 
     <div class="card">
-      <img src="https://via.placeholder.com/300" />
       <h3>Luxury Chronograph Watch</h3>
       <p>₹1,999</p>
-      <button>Buy Now</button>
+      <button onclick="payNow('Luxury Chronograph Watch',1999)">Buy Now</button>
     </div>
 
     <div class="card">
-      <img src="https://via.placeholder.com/300" />
       <h3>Classic Leather Watch</h3>
       <p>₹1,799</p>
-      <button>Buy Now</button>
+      <button onclick="payNow('Classic Leather Watch',1799)">Buy Now</button>
     </div>
 
     <div class="card">
-      <img src="https://via.placeholder.com/300" />
       <h3>Premium Steel Watch</h3>
       <p>₹2,499</p>
-      <button>Buy Now</button>
+      <button onclick="payNow('Premium Steel Watch',2499)">Buy Now</button>
     </div>
 
   </div>
@@ -52,6 +53,26 @@
 <footer>
   © 2025 Drish Quality Products
 </footer>
+
+<script>
+  function payNow(product, amount) {
+    var options = {
+      "key": "rzp_test_RsL5q1IacpAAeJ",
+      "amount": amount * 100,
+      "currency": "INR",
+      "name": "Drish Quality Products",
+      "description": product,
+      "handler": function (response){
+        alert("Payment Successful! Payment ID: " + response.razorpay_payment_id);
+      },
+      "theme": {
+        "color": "#000000"
+      }
+    };
+    var rzp1 = new Razorpay(options);
+    rzp1.open();
+  }
+</script>
 
 </body>
 </html>
