--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ button {
   color: #888;
   margin-top: 10px;
 }
-     </style>
+     <script src="https://checkout.razorpay.com/v1/checkout.js"></script></style>
 </head>
 
 <body>
@@ -105,7 +105,7 @@ button {
   </div>
 
   <h3>Luxury Chronograph Watch</h3>
-  <div class="price">₹1,999</div>
+  <div class="price">₹599</div>
 
   <button onclick="payNow('Luxury Chronograph Watch',599)">
     Buy Now
