--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ button {
 
 
     <div class="luxury-card">
-  <img src="watch-hero.jpg" class="main-img">
+  <img src="image-63.png" class="main-img">
 
   <div class="thumbs">
     <img src="watch-main.jpg">
