--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 .luxury-card {
   background: #111;
   border-radius: 16px;
-  padding: 20px;
+  padding: 16px;
   max-width: 360px;
   box-shadow: 0 15px 40px rgba(0,0,0,0.7);
 }
@@ -33,15 +33,16 @@
 
 .main-img {
   width: 100%;
+  height: auto;
   border-radius: 12px;
+  display: block;
 }
 
-.thumbs {
-  display: flex;
-  gap: 10px;
-  margin: 12px 0;
+.thumbs img {
+  width: 48%;
+  height: auto;
+  border-radius: 8px;
 }
-
 .thumbs img {
   width: 48%;
   border-radius: 8px;
@@ -52,17 +53,7 @@
   font-size: 22px;
   font-weight: bold;
   color: #e50914;
-}
-
-.features {
-  list-style: none;
-  padding: 0;
-  font-size: 14px;
-  color: #ccc;
-}
-
-.features li {
-  margin-bottom: 6px;
+  margin: 10px 0;
 }
 
 button {
