--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@ button {
       <img src="watch-life.jpg">
     </div>
 
-    <h3>Luxury Chronograph Watch</h3>
-    <div class="price">₹1,999</div>
+    <h3>Car Wheel Spinning 360° Luxury Mens Watch</h3>
+    <div class="price">₹599</div>
 
     <button>Buy Now</button>
 
