--- a/index.html
+++ b/index.html
@@ -104,6 +104,18 @@ button {
     <button onclick="payNow()">Buy Now</button>
 
     <div class="secure">🔒 Secure Payment</div>
+    <div class="product">
+
+  <img src="watch-main.jpg" alt="Classic Black Watch">
+
+  <h3>Classic Black Leather Watch</h3>
+  <div class="price">₹899</div>
+
+  <button onclick="payNow()">Buy Now</button>
+
+  <div class="secure">🔒 Secure Payment</div>
+
+    </div>
 
   </div>
 </div>
