--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@ button {
 
   <img src="watch-main.jpg" alt="Classic Black Watch">
 
-  <h3>Classic Black Leather Watch</h3>
-  <div class="price">₹899</div>
+  <h3>Stainless Steels Analog Watch Men</h3>
+  <div class="price">₹599</div>
 
   <button onclick="payNow()">Buy Now</button>
 
