--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ button {
     <div class="secure">🔒 Secure Payment</div>
     <div class="product">
 
-  <img src="watch-main.jpg" alt="Classic Black Watch">
+  <img src="image-50.png" alt="Classic Black Watch">
 
   <h3>Stainless Steels Analog Watch Men</h3>
   <div class="price">₹599</div>
