--- a/index.html
+++ b/index.html
@@ -29,6 +29,24 @@ header {
   padding: 16px;
 }
 
+.products {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+  gap: 16px;
+}
+
+.product {
+  background: #111;
+  border-radius: 14px;
+  padding: 14px;
+  text-align: center;
+}
+
+.product img {
+  width: 100%;
+  border-radius: 12px;
+}
+
 .product {
   background: #111;
   border-radius: 14px;
@@ -89,7 +107,24 @@ button {
 </header>
 
 <div class="container">
-  <div class="product">
+
+  <div class="products">
+
+    <div class="product">
+      <!-- Product 1 -->
+    </div>
+
+    <div class="product">
+      <!-- Product 2 -->
+    </div>
+
+    <div class="product">
+      <!-- Product 3 -->
+    </div>
+
+  </div>
+
+</div>
 
     <img src="image-63.png" alt="Watch Hero">
 
