--- a/index.html
+++ b/index.html
@@ -126,19 +126,33 @@ button {
 
 </div>
 
-    <img src="image-63.png" alt="Watch Hero">
+    <div class="products">
 
-    <div class="thumbs">
-      <img src="watch-main.jpg">
-      <img src="watch-life.jpg">
-    </div>
-
+  <div class="product">
+    <img src="image-63.png" alt="Car Wheel Watch">
     <h3>Car Wheel Spinning 360° Luxury Mens Watch</h3>
     <div class="price">₹599</div>
-
     <button onclick="payNow()">Buy Now</button>
-
     <div class="secure">🔒 Secure Payment</div>
+  </div>
+
+  <div class="product">
+    <img src="image-50.png" alt="Classic Black Watch">
+    <h3>Stainless Steel Analog Watch</h3>
+    <div class="price">₹1,099</div>
+    <button onclick="payNow()">Buy Now</button>
+    <div class="secure">🔒 Secure Payment</div>
+  </div>
+
+  <div class="product">
+    <img src="image-55.png" alt="Premium Watch">
+    <h3>Premium Luxury Watch</h3>
+    <div class="price">₹1,299</div>
+    <button onclick="payNow()">Buy Now</button>
+    <div class="secure">🔒 Secure Payment</div>
+  </div>
+
+    </div>
     <div class="product">
 
   <img src="image-50.png" alt="Classic Black Watch">
