--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@ button {
 
   <div class="product">
     <img src="image-50.png" alt="Classic Black Watch">
+    <img src="image-55.png"
     <h3>Stainless Steel Analog Watch</h3>
     <div class="price">₹1,099</div>
     <button onclick="payNow()">Buy Now</button>
