--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@ button {
     <h3>Stainless Steel Analog Watch</h3>
     <div class="price">₹599</div>
     <button onclick="payNow()">Buy Now</button>
+    <button class="cod-btn" onclick="orderCOD('Car Wheel Spinning Watch', 599)">
+  Cash on Delivery
+    </button>
     <div class="secure">🔒 Secure Payment</div>
   </div>
 
