--- a/index.html
+++ b/index.html
@@ -143,6 +143,10 @@ button {
     <h3>Car Wheel Spinning 360° Luxury Mens Watch</h3>
     <div class="price">₹599</div>
     <button onclick="payNow()">Buy Now</button>
+
+<button class="cod-btn" onclick="orderCOD('Car Wheel Spinning Watch', 599)">
+  Cash on Delivery
+</button>
     <div class="secure">🔒 Secure Payment</div>
   </div>
 
@@ -162,6 +166,9 @@ button {
     <h3>Premium Luxury Watch</h3>
     <div class="price">₹599</div>
     <button onclick="payNow()">Buy Now</button>
+    <button class="cod-btn" onclick="orderCOD('Car Wheel Spinning Watch', 599)">
+  Cash on Delivery
+    </button>
     <div class="secure">🔒 Secure Payment</div>
   </div>
 
@@ -175,6 +182,9 @@ button {
   <div class="price">₹599</div>
 
   <button onclick="payNow()">Buy Now</button>
+      <button class="cod-btn" onclick="orderCOD('Car Wheel Spinning Watch', 599)">
+  Cash on Delivery
+      </button>
 
   <div class="secure">🔒 Secure Payment</div>
 
