--- a/index.html
+++ b/index.html
@@ -106,6 +106,12 @@ button {
   border-radius: 8px;
   font-size: 14px;
   }
+  .cod-note {
+  margin-top: 6px;
+  font-size: 12px;
+  color: #9be79b;
+  text-align: center;
+  }
 </style>
 </head>
 
@@ -114,6 +120,9 @@ button {
 <header>
   <h1>Drish Quality Products</h1>
   <p>Premium Watches</p>
+  <p style="font-size:12px;color:#ccc;">
+  🔒 Secure Online Payment • 💵 Cash on Delivery Available
+  </p>
 </header>
 
 <div class="container">
@@ -144,9 +153,14 @@ button {
     <div class="price">₹599</div>
     <button onclick="payNow()">Buy Now</button>
 
-<button class="cod-btn" onclick="orderCOD('Car Wheel Spinning Watch', 599)">
+<button class="cod-btn" onclick="orderCOD()">
   Cash on Delivery
 </button>
+
+<div class="cod-note">
+  ✔ Cash on Delivery available<br>
+  📦 Delivered in 3–5 days
+</div>
     <div class="secure">🔒 Secure Payment</div>
   </div>
 
@@ -155,9 +169,14 @@ button {
     <h3>Stainless Steel Analog Watch</h3>
     <div class="price">₹599</div>
     <button onclick="payNow()">Buy Now</button>
-    <button class="cod-btn" onclick="orderCOD('Car Wheel Spinning Watch', 599)">
+    <button class="cod-btn" onclick="orderCOD()">
   Cash on Delivery
-    </button>
+</button>
+
+<div class="cod-note">
+  ✔ Cash on Delivery available<br>
+  📦 Delivered in 3–5 days
+</div>
     <div class="secure">🔒 Secure Payment</div>
   </div>
 
@@ -166,9 +185,14 @@ button {
     <h3>Premium Luxury Watch</h3>
     <div class="price">₹599</div>
     <button onclick="payNow()">Buy Now</button>
-    <button class="cod-btn" onclick="orderCOD('Car Wheel Spinning Watch', 599)">
+    <button class="cod-btn" onclick="orderCOD()">
   Cash on Delivery
-    </button>
+</button>
+
+<div class="cod-note">
+  ✔ Cash on Delivery available<br>
+  📦 Delivered in 3–5 days
+</div>
     <div class="secure">🔒 Secure Payment</div>
   </div>
 
@@ -181,10 +205,14 @@ button {
   <h3>Stainless Steels Analog Watch Men</h3>
   <div class="price">₹599</div>
 
-  <button onclick="payNow()">Buy Now</button>
-      <button class="cod-btn" onclick="orderCOD('Car Wheel Spinning Watch', 599)">
+  <button class="cod-btn" onclick="orderCOD()">
   Cash on Delivery
-      </button>
+</button>
+
+<div class="cod-note">
+  ✔ Cash on Delivery available<br>
+  📦 Delivered in 3–5 days
+</div>
 
   <div class="secure">🔒 Secure Payment</div>
 
