--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ button {
 
   <h3>Stainless Steels Analog Watch Men</h3>
   <div class="price">₹599</div>
-
+  <button onclick="payNow()">Buy Now</button>
   <button class="cod-btn" onclick="orderCOD()">
   Cash on Delivery
 </button>
