--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@ button {
       <!-- Product 3 -->
     </div>
 
+    <div class="product">
+      <!-- Product 4 -->
+    </div>
   </div>
 
 </div>
