--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ button {
     </div>
     <div class="product">
 
-  <img src="image-50.png" alt="Classic Black Watch">
+  <img src="watch-main.jpg" alt="Classic Black Watch">
 
   <h3>Stainless Steels Analog Watch Men</h3>
   <div class="price">₹599</div>
