--- a/index.html
+++ b/index.html
@@ -155,6 +155,35 @@ button {
   font-size: 12px;
   color: #ccc;
 }
+  .site-footer {
+  background: #000;
+  padding: 24px 16px;
+  margin-top: 30px;
+  border-top: 1px solid #222;
+  text-align: center;
+}
+
+.site-footer h3 {
+  margin-bottom: 6px;
+  font-size: 18px;
+}
+
+.site-footer p {
+  font-size: 13px;
+  color: #bbb;
+  margin: 4px 0;
+}
+
+.footer-info,
+.footer-contact {
+  margin-top: 14px;
+}
+
+.footer-bottom {
+  margin-top: 18px;
+  font-size: 12px;
+  color: #777;
+}
 </style>
 </head>
 
@@ -280,5 +309,26 @@ function payNow() {
   window.open("https://wa.me/" + phone + "?text=" + message, "_blank");
   }
 </script>
+  <footer class="site-footer">
+  <div class="footer-brand">
+    <h3>Drish Quality Products</h3>
+    <p>Premium Watches at Honest Prices</p>
+  </div>
+
+  <div class="footer-info">
+    <p>📦 Pan-India Delivery</p>
+    <p>💵 Cash on Delivery Available</p>
+    <p>🔒 Secure Payments via Razorpay</p>
+  </div>
+
+  <div class="footer-contact">
+    <p>📞 WhatsApp Support</p>
+    <p>📧 Email: drish13122025@gmail.com</p>
+  </div>
+
+  <div class="footer-bottom">
+    © 2025 Drish Quality Products. All rights reserved.
+  </div>
+  </footer>
 </body>
 </html>
