--- a/index.html
+++ b/index.html
@@ -155,6 +155,24 @@ button {
   font-size: 12px;
   color: #ccc;
 }
+  .brand-logo {
+  text-align: center;
+}
+
+.logo-main {
+  font-size: 26px;
+  font-weight: 700;
+  letter-spacing: 3px;
+  color: #ffffff;
+}
+
+.logo-sub {
+  display: block;
+  font-size: 11px;
+  letter-spacing: 2px;
+  color: #aaaaaa;
+  margin-top: -2px;
+}
   .site-footer {
   background: #000;
   padding: 24px 16px;
@@ -190,9 +208,9 @@ button {
 <body>
 
 <header class="site-header">
-  <div class="brand">
-    <h1>Drish</h1>
-    <span>Quality Products</span>
+  <div class="brand-logo">
+  <span class="logo-main">DRISH</span>
+  <span class="logo-sub">Quality Products</span>
   </div>
 
   <div class="tagline">
