--- a/index.html
+++ b/index.html
@@ -214,9 +214,6 @@ button {
 
 <header class="site-header">
   <div class="brand-logo">
-    <div class="cart-bar">
-  🛒 Cart: <span id="cart-count">0</span>
-    </div>
   <span class="logo-main">DRISH</span>
   <span class="logo-sub">Quality Products</span>
   </div>
@@ -233,9 +230,8 @@ button {
     <img src="image-63.png" alt="Car Wheel Watch">
     <h3>Car Wheel Spinning 360° Luxury Mens Watch</h3>
     <div class="price">₹599</div>
-    
-<button onclick="addToCart('Car Wheel Spinning Watch', 599)">
-  Add to Cart
+    <button onclick="payNow(599)">
+  Buy Now
 </button>
 <button class="cod-btn" onclick="orderCOD()">
   Cash on Delivery
@@ -252,9 +248,9 @@ button {
     <img src="image-50.png" alt="Classic Black Watch">
     <h3>Stainless Steel Analog Watch</h3>
     <div class="price">₹599</div>
-    <button onclick="addToCart('Car Wheel Spinning Watch', 599)">
-  Add to Cart
-    </button>
+  <button onclick="payNow(599)">
+  Buy Now
+</button>
     <button class="cod-btn" onclick="orderCOD()">
   Cash on Delivery
 </button>
@@ -270,9 +266,9 @@ button {
     <img src="image-55.png" alt="Premium Watch">
     <h3>Premium Luxury Watch</h3>
     <div class="price">₹599</div>
-    <button onclick="addToCart('Car Wheel Spinning Watch', 599)">
-  Add to Cart
-    </button>
+    <button onclick="payNow(599)">
+  Buy Now
+</button>
     <button class="cod-btn" onclick="orderCOD()">
   Cash on Delivery
 </button>
@@ -290,8 +286,8 @@ button {
 
   <h3>Stainless Steels Analog Watch Men</h3>
   <div class="price">₹599</div>
-  <button onclick="addToCart('Car Wheel Spinning Watch', 599)">
-  Add to Cart
+  <button onclick="payNow(599)">
+  Buy Now
   </button>
   <button class="cod-btn" onclick="orderCOD()">
   Cash on Delivery
@@ -366,24 +362,5 @@ function payNow() {
   </div>
   </footer>
   <script>
-let cart = [];
-
-function addToCart(name, price) {
-  cart.push({ name, price });
-  document.getElementById("cart-count").innerText = cart.length;
-  alert(name + " added to cart");
-}
-
-function checkout() {
-  if (cart.length === 0) {
-    alert("Your cart is empty");
-    return;
-  }
-
-  let total = cart.reduce((sum, item) => sum + item.price, 0);
-
-  payNow(total);
-}
-  </script>
 </body>
 </html>
