--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Drish Quality Products</title>
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-
+.discount-note {
+  font-size: 12px;
+  color: #4caf50;
+  margin: 6px 0;
+  font-weight: bold;
+}
 <style>
 * {
   box-sizing: border-box;
@@ -230,12 +235,15 @@ button {
     <img src="image-63.png" alt="Car Wheel Watch">
     <h3>Car Wheel Spinning 360° Luxury Mens Watch</h3>
     <div class="price">₹599</div>
-    <button onclick="payNow(599)">
-  Buy Now
-</button>
+    <button onclick="payNow(950)">
+  Buy Now (5% OFF)
+    </button>
 <button class="cod-btn" onclick="orderCOD()">
   Cash on Delivery
 </button>
+    <div class="discount-note">
+  💳 Pay Online & Get 5% OFF
+</div>
 
 <div class="cod-note">
   ✔ Cash on Delivery available<br>
@@ -248,8 +256,8 @@ button {
     <img src="image-50.png" alt="Classic Black Watch">
     <h3>Stainless Steel Analog Watch</h3>
     <div class="price">₹599</div>
-  <button onclick="payNow(599)">
-  Buy Now
+  <button onclick="payNow(950)">
+  Buy Now (5% OFF)
 </button>
     <button class="cod-btn" onclick="orderCOD()">
   Cash on Delivery
@@ -266,12 +274,13 @@ button {
     <img src="image-55.png" alt="Premium Watch">
     <h3>Premium Luxury Watch</h3>
     <div class="price">₹599</div>
-    <button onclick="payNow(599)">
-  Buy Now
+    <button onclick="payNow(950)">
+  Buy Now (5% OFF)
 </button>
     <button class="cod-btn" onclick="orderCOD()">
   Cash on Delivery
 </button>
+    
 
 <div class="cod-note">
   ✔ Cash on Delivery available<br>
@@ -286,12 +295,15 @@ button {
 
   <h3>Stainless Steels Analog Watch Men</h3>
   <div class="price">₹599</div>
-  <button onclick="payNow(599)">
-  Buy Now
-  </button>
+  <button onclick="payNow(950)">
+  Buy Now (5% OFF)
+</button>
   <button class="cod-btn" onclick="orderCOD()">
   Cash on Delivery
 </button>
+      <div class="discount-note">
+  💳 Pay Online & Get 5% OFF
+      </div>
 <div class="cod-note">
   ✔ Cash on Delivery available<br>
   📦 Delivered in 3–5 days
