--- a/index.html
+++ b/index.html
@@ -262,6 +262,10 @@ button {
     <button class="cod-btn" onclick="orderCOD()">
   Cash on Delivery
 </button>
+    </button>
+    <div class="discount-note">
+  💳 Pay Online & Get 5% OFF
+</div>
 
 <div class="cod-note">
   ✔ Cash on Delivery available<br>
@@ -280,7 +284,10 @@ button {
     <button class="cod-btn" onclick="orderCOD()">
   Cash on Delivery
 </button>
-    
+    </button>
+    <div class="discount-note">
+  💳 Pay Online & Get 5% OFF
+</div>
 
 <div class="cod-note">
   ✔ Cash on Delivery available<br>
