--- a/index.html
+++ b/index.html
@@ -234,7 +234,12 @@ button {
   <div class="product">
     <img src="image-63.png" alt="Car Wheel Watch">
     <h3>Car Wheel Spinning 360° Luxury Mens Watch</h3>
-    <div class="price">₹599</div>
+    <div class="price">
+  <span style="text-decoration: line-through; color:#888;">₹599</span>
+  <span style="color:#4caf50;"> ₹569</span>
+</div>
+
+<div class="discount-note">Pay Online & Save 5%</div>
     <button onclick="payNow(950)">
   Buy Now (5% OFF)
     </button>
@@ -255,7 +260,12 @@ button {
   <div class="product">
     <img src="image-50.png" alt="Classic Black Watch">
     <h3>Stainless Steel Analog Watch</h3>
-    <div class="price">₹599</div>
+    <div class="price">
+  <span style="text-decoration: line-through; color:#888;">₹599</span>
+  <span style="color:#4caf50;"> ₹569</span>
+</div>
+
+<div class="discount-note">Pay Online & Save 5%</div>
   <button onclick="payNow(950)">
   Buy Now (5% OFF)
 </button>
@@ -277,7 +287,12 @@ button {
   <div class="product">
     <img src="image-55.png" alt="Premium Watch">
     <h3>Premium Luxury Watch</h3>
-    <div class="price">₹599</div>
+    <div class="price">
+  <span style="text-decoration: line-through; color:#888;">₹599</span>
+  <span style="color:#4caf50;"> ₹569</span>
+</div>
+
+<div class="discount-note">Pay Online & Save 5%</div>
     <button onclick="payNow(950)">
   Buy Now (5% OFF)
 </button>
@@ -301,7 +316,12 @@ button {
   <img src="watch-main.jpg" alt="Classic Black Watch">
 
   <h3>Stainless Steels Analog Watch Men</h3>
-  <div class="price">₹599</div>
+  <div class="price">
+  <span style="text-decoration: line-through; color:#888;">₹599</span>
+  <span style="color:#4caf50;"> ₹569</span>
+</div>
+
+<div class="discount-note">Pay Online & Save 5%</div>
   <button onclick="payNow(950)">
   Buy Now (5% OFF)
 </button>
