--- a/index.html
+++ b/index.html
@@ -234,11 +234,11 @@ button {
   <div class="product">
     <img src="image-63.png" alt="Car Wheel Watch">
     <h3>Car Wheel Spinning 360° Luxury Mens Watch</h3>
-    <div class="price">
-  <span style="text-decoration: line-through; color:#888;">₹599</span>
-  <span style="color:#4caf50;"> ₹569</span>
-</div>
-
+    <div class="price-row">
+  <span class="old-price">₹13,499</span>
+  <span class="new-price">₹3,599</span>
+  <span class="save-text">Save 73%</span>
+    </div>
 <div class="discount-note">Pay Online & Save 5%</div>
     <button onclick="payNow(950)">
   Buy Now (5% OFF)
@@ -260,10 +260,7 @@ button {
   <div class="product">
     <img src="image-50.png" alt="Classic Black Watch">
     <h3>Stainless Steel Analog Watch</h3>
-    <div class="price">
-  <span style="text-decoration: line-through; color:#888;">₹599</span>
-  <span style="color:#4caf50;"> ₹569</span>
-</div>
+    
 
 <div class="discount-note">Pay Online & Save 5%</div>
   <button onclick="payNow(950)">
@@ -287,9 +284,10 @@ button {
   <div class="product">
     <img src="image-55.png" alt="Premium Watch">
     <h3>Premium Luxury Watch</h3>
-    <div class="price">
-  <span style="text-decoration: line-through; color:#888;">₹599</span>
-  <span style="color:#4caf50;"> ₹569</span>
+    <div class="price-row">
+  <span class="old-price">₹13,499</span>
+  <span class="new-price">₹3,599</span>
+  <span class="save-text">Save 73%</span>
 </div>
 
 <div class="discount-note">Pay Online & Save 5%</div>
@@ -316,9 +314,10 @@ button {
   <img src="watch-main.jpg" alt="Classic Black Watch">
 
   <h3>Stainless Steels Analog Watch Men</h3>
-  <div class="price">
-  <span style="text-decoration: line-through; color:#888;">₹599</span>
-  <span style="color:#4caf50;"> ₹569</span>
+  <div class="price-row">
+  <span class="old-price">₹13,499</span>
+  <span class="new-price">₹3,599</span>
+  <span class="save-text">Save 73%</span>
 </div>
 
 <div class="discount-note">Pay Online & Save 5%</div>
