--- a/index.html
+++ b/index.html
@@ -260,7 +260,11 @@ button {
   <div class="product">
     <img src="image-50.png" alt="Classic Black Watch">
     <h3>Stainless Steel Analog Watch</h3>
-    
+    <div class="price-row">
+  <span class="old-price">₹13,499</span>
+  <span class="new-price">₹3,599</span>
+  <span class="save-text">Save 73%</span>
+</div>
 
 <div class="discount-note">Pay Online & Save 5%</div>
   <button onclick="payNow(950)">
