--- a/index.html
+++ b/index.html
@@ -212,6 +212,12 @@ button {
   color: #4caf50;
   margin: 6px 0;
   font-weight: bold;
+    .old-price {
+  font-size: 14px;
+  color: #888;
+  text-decoration: line-through;
+  text-decoration-thickness: 2px;
+    }
 </style>
 </head>
 
