--- a/index.html
+++ b/index.html
@@ -212,12 +212,32 @@ button {
   color: #4caf50;
   margin: 6px 0;
   font-weight: bold;
-    .old-price {
+    .price-row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  margin: 8px 0;
+  flex-wrap: wrap;
+}
+
+.old-price {
   font-size: 14px;
   color: #888;
   text-decoration: line-through;
-  text-decoration-thickness: 2px;
-    }
+}
+
+.new-price {
+  font-size: 22px;
+  font-weight: bold;
+  color: #000;
+}
+
+.save-text {
+  font-size: 14px;
+  font-weight: bold;
+  color: #e53935;
+}
 </style>
 </head>
 
