--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ button {
 .new-price {
   font-size: 22px;
   font-weight: bold;
-  color: #000;
+  color: #e50914; /* red like Buy Now */
 }
 
 .save-text {
@@ -238,6 +238,9 @@ button {
   font-weight: bold;
   color: #e53935;
 }
+    .price-row {
+  margin: 8px 0;
+    }
 </style>
 </head>
 
