--- a/index.html
+++ b/index.html
@@ -212,14 +212,14 @@ button {
   color: #4caf50;
   margin: 6px 0;
   font-weight: bold;
-    .price-row {
+  .price-row {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 10px;
   margin: 8px 0;
   flex-wrap: wrap;
-}
+  }
 
 .old-price {
   font-size: 14px;
@@ -230,14 +230,13 @@ button {
 .new-price {
   font-size: 22px;
   font-weight: bold;
-  color: #e50914; /* red like Buy Now */
+  color: #e50914; /* red */
 }
-
-.save-text {
+ .save-text {
   font-size: 14px;
   font-weight: bold;
-  color: #e53935;
-}
+  color: #4caf50;
+    }
     .price-row {
   margin: 8px 0;
     }
