--- a/index.html
+++ b/index.html
@@ -223,8 +223,7 @@ button {
 
 .old-price {
   font-size: 14px;
-  color: #888;
-  text-decoration: line-through;
+  color: #999;
 }
 
 .new-price {
@@ -239,6 +238,9 @@ button {
     }
     .price-row {
   margin: 8px 0;
+    }
+    .old-price {
+  text-decoration-thickness: 2px;
     }
 </style>
 </head>
@@ -263,7 +265,7 @@ button {
     <img src="image-63.png" alt="Car Wheel Watch">
     <h3>Car Wheel Spinning 360° Luxury Mens Watch</h3>
     <div class="price-row">
-  <span class="old-price">₹13,499</span>
+  <del class="old-price">₹13,499</del>
   <span class="new-price">₹3,599</span>
   <span class="save-text">Save 73%</span>
     </div>
@@ -289,7 +291,7 @@ button {
     <img src="image-50.png" alt="Classic Black Watch">
     <h3>Stainless Steel Analog Watch</h3>
     <div class="price-row">
-  <span class="old-price">₹13,499</span>
+  <del class="old-price">₹13,499</del>
   <span class="new-price">₹3,599</span>
   <span class="save-text">Save 73%</span>
 </div>
@@ -317,7 +319,7 @@ button {
     <img src="image-55.png" alt="Premium Watch">
     <h3>Premium Luxury Watch</h3>
     <div class="price-row">
-  <span class="old-price">₹13,499</span>
+  <del class="old-price">₹13,499</del>
   <span class="new-price">₹3,599</span>
   <span class="save-text">Save 73%</span>
 </div>
@@ -347,7 +349,7 @@ button {
 
   <h3>Stainless Steels Analog Watch Men</h3>
   <div class="price-row">
-  <span class="old-price">₹13,499</span>
+  <del class="old-price">₹13,499</del>
   <span class="new-price">₹3,599</span>
   <span class="save-text">Save 73%</span>
 </div>
