--- a/index.html
+++ b/index.html
@@ -372,6 +372,33 @@ button {
   <div class="secure">🔒 Secure Payment</div>
 
     </div>
+      <div class="product">
+    <img src="image-50.png" alt="Classic Black Watch">
+    <h3>Stainless Steel Analog Watch</h3>
+    <div class="price-row">
+  <del class="old-price">₹13,499</del>
+  <span class="new-price">₹3,599</span>
+  <span class="save-text">Save 73%</span>
+</div>
+
+<div class="discount-note">Pay Online & Save 5%</div>
+  <button onclick="payNow(950)">
+  Buy Now (5% OFF)
+</button>
+    <button class="cod-btn" onclick="orderCOD()">
+  Cash on Delivery
+</button>
+    </button>
+    <div class="discount-note">
+  💳 Pay Online & Get 5% OFF
+</div>
+
+<div class="cod-note">
+  ✔ Cash on Delivery available<br>
+  📦 Delivered in 3–5 days
+</div>
+    <div class="secure">🔒 Secure Payment</div>
+      </div>
 
   </div>
 </div>
