--- a/index.html
+++ b/index.html
@@ -270,9 +270,7 @@ button {
   <span class="save-text">Save 73%</span>
     </div>
 <div class="discount-note">Pay Online & Save 5%</div>
-    <button onclick="payNow(950)">
-  Buy Now (5% OFF)
-    </button>
+  <button onclick="payNow(3599)">Buy Now (5% OFF)</button>
 <button class="cod-btn" onclick="orderCOD()">
   Cash on Delivery
 </button>
@@ -297,7 +295,7 @@ button {
 </div>
 
 <div class="discount-note">Pay Online & Save 5%</div>
-  <button onclick="payNow(950)">
+  <button onclick="payNow(3599)">Buy Now (5% OFF)</button>
   Buy Now (5% OFF)
 </button>
     <button class="cod-btn" onclick="orderCOD()">
