--- a/index.html
+++ b/index.html
@@ -353,9 +353,7 @@ button {
 </div>
 
 <div class="discount-note">Pay Online & Save 5%</div>
-  <button onclick="payNow(950)">
-  Buy Now (5% OFF)
-</button>
+  <button onclick="payNow(3599)">Buy Now (5% OFF)</button>
   <button class="cod-btn" onclick="orderCOD()">
   Cash on Delivery
 </button>
@@ -380,9 +378,7 @@ button {
 </div>
 
 <div class="discount-note">Pay Online & Save 5%</div>
-  <button onclick="payNow(950)">
-  Buy Now (5% OFF)
-</button>
+  <button onclick="payNow(3599)">Buy Now (5% OFF)</button>
     <button class="cod-btn" onclick="orderCOD()">
   Cash on Delivery
 </button>
