--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ button {
   <span class="save-text">Save 45%</span>
     </div>
 <div class="discount-note">Pay Online & Save 5%</div>
-  <button onclick="payNow(599)">Buy Now (5% OFF)</button>
+  <button type="button" onclick="payNow(599)">Buy Now (5% OFF)</button>
 <button class="cod-btn" onclick="orderCOD('Car Wheel Spinning Watch', 599)">
   Cash on Delivery
 </button>
@@ -295,7 +295,7 @@ button {
 </div>
 
 <div class="discount-note">Pay Online & Save 5%</div>
-  <button onclick="payNow(599)">Buy Now (5% OFF)</button>
+  <button type="button" onclick="payNow(599)">Buy Now (5% OFF)</button>
   Buy Now (5% OFF)
   </button>
     <button class="cod-btn" onclick="orderCOD('Car Wheel Spinning Watch', 599)">
@@ -322,9 +322,7 @@ button {
 </div>
 
 <div class="discount-note">Pay Online & Save 5%</div>
-    <button onclick="payNow(399)">
-  Buy Now (5% OFF)
-</button>
+    <button type="button" onclick="payNow(599)">Buy Now (5% OFF)</button>
     <button class="cod-btn" onclick="orderCOD('Car Wheel Spinning Watch', 399)">
   Cash on Delivery
 </button>
@@ -351,7 +349,7 @@ button {
 </div>
 
 <div class="discount-note">Pay Online & Save 5%</div>
-  <button onclick="payNow(399)">Buy Now (5% OFF)</button>
+  <button type="button" onclick="payNow(599)">Buy Now (5% OFF)</button>
   <button class="cod-btn" onclick="orderCOD('Car Wheel Spinning Watch', 3599)">
   Cash on Delivery
 </button>
@@ -376,7 +374,7 @@ button {
 </div>
 
 <div class="discount-note">Pay Online & Save 5%</div>
-  <button onclick="payNow(3599)">Buy Now (5% OFF)</button>
+  <button type="button" onclick="payNow(599)">Buy Now (5% OFF)</button>
     <button class="cod-btn" onclick="orderCOD('Car Wheel Spinning Watch', 3599)">
   Cash on Delivery
 </button>
