--- a/index.html
+++ b/index.html
@@ -270,7 +270,9 @@ button {
   <span class="save-text">Save 45%</span>
     </div>
 <div class="discount-note">Pay Online & Save 5%</div>
-  <button type="button" onclick="payNow(599)">Buy Now (5% OFF)</button>
+  <button type="button" onclick="alert('Button clicked')">
+  Buy Now (5% OFF)
+</button>
 <button class="cod-btn" onclick="orderCOD('Car Wheel Spinning Watch', 599)">
   Cash on Delivery
 </button>
